adding code first database

--- a/InternationalizationApp.DAL/InternationalizationApp.DAL.csproj
+++ b/InternationalizationApp.DAL/InternationalizationApp.DAL.csproj
@@ -49,6 +49,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Context.cs" />
+    <Compile Include="Migrations\201905261855387_InitialMigration.cs" />
+    <Compile Include="Migrations\201905261855387_InitialMigration.Designer.cs">
+      <DependentUpon>201905261855387_InitialMigration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Repository.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -56,6 +61,11 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201905261855387_InitialMigration.resx">
+      <DependentUpon>201905261855387_InitialMigration.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
