--- a/InternationalizationApp/Web.Release.config
+++ b/InternationalizationApp/Web.Release.config
@@ -9,8 +9,8 @@
     finds an attribute "name" that has a value of "MyDB".
 
     <connectionStrings>
-      <add name="MyDB"
-        connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True"
+      <add name="InternationalizationAppDB"
+        connectionString="Data Source=(localdb)\ProjectsV13;Initial Catalog=InternationalizationAppDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
