--- a/InternationalizationApp.DAL/InternationalizationApp.DAL.csproj
+++ b/InternationalizationApp.DAL/InternationalizationApp.DAL.csproj
@@ -57,6 +57,10 @@
     <Compile Include="Models\Repository.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\BaseRepository.cs" />
+    <Compile Include="Repositories\IUserRepository.cs" />
+    <Compile Include="Repositories\UserRepository.cs" />
+    <Compile Include="UnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
